# fem2geo

./: .readthedocs.yaml  .zenodo.json  CITATION.cff  E_composite_plot.py  MANIFEST.in  README.md  StrSF_fem2geo-points.csv  StrikeSlipFault.msh  StrikeSlipFault.py  codecov.yml  dot_ptovuUserDefault_march9  environment.yaml  environment.yml  ex1_subset.py  ex2_multiple_vtu.py  ex3_plotdilation.py  ex4_fullplot.py  ex5_multipleplots.py  model_handler.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  run_fem2geo_F_fem2geo-points  run_fem2geo_G_fem2geo-points  run_muriel_modelP2.py  setup.cfg
.github/workflows/: build-sphinx.yml  build-test.yml  publish-pypi.yml  release-tutorials.yml
docs/: config.py  index.rst
docs/source/: conf.py  index.rst
docs/source/intro/: installation.rst  theory.rst  user_guide.rst
docs/source/reference/: api_reference.rst
docs/source/tutorials/: fracture.rst  kostrov.rst  multi-sites.rst  principal-directions.rst  projections.rst  resolved-shear.rst  tendency.rst
examples/: A_principal_directions.py  B_from_multiple_vtu.py  C_dilation_tendency_contour.py  D_directions_and_tendencies.py  E_composite_plot.py  E_full_plot.py  F_SlipDilationSummarisedTendency_plot_MultiplePoints.py  G_SummarisedTendency_plot_MultiplePoints.py  cBaUn_27points.csv  run_fem2geo_F_27points  run_fem2geo_G_27points  tensor_methods.py
examples/notebooks/: E_full_plot.ipynb
fem2geo/: __init__.py  data.py  model.py  model_handler.py  plots.py  projector.py  runner.py  tensor.py  tensor_methods.py  transform.py  transform_funcs.py
fem2geo/cmd/: main.py  tutorials.py
fem2geo/internal/: io.py  logger.py  schema.py  tutorials.py
fem2geo/internal/schemas/: adeli.yaml  adeli2.yaml  adeli3.yaml
fem2geo/jobs/: fracture.py  fracture_analysis.py  kostrov.py  kostrov_analysis.py  principal_directions.py  project.py  resolved_shear.py  sites.py  tendency.py  tendency_plot.py
fem2geo/utils/: projections.py  tensor.py  transform.py
fem2geo_lib/: model_handler.py  tensor_methods.py  transform_funcs.py
lib/: model_handler.py  slip_projection.py  structural.py  transformations.py
tests/: test_data.py  test_io.py  test_logger.py  test_model.py  test_plots.py  test_project.py  test_projections.py  test_projector.py  test_runner.py  test_schema.py  test_tensor.py  test_transform.py  test_tutorials.py
tutorials/: A_principal_directions.py  B_from_multiple_vtu.py  C_dilation_tendency_contour.py  D_directions_and_tendencies.py  E_composite_plot.py
tutorials/1_probing_model/: config.yaml  config_advanced.yaml
tutorials/1_probing_models/: basic.yaml  config_1.yaml  config_2.yaml  config_3.yaml  config_4.yaml  styled.yaml
tutorials/2_fracture_analysis/: basic.yaml  config_advanced.yaml  styled.yaml
tutorials/2_many_models/: config.yaml  config_advanced.yaml
tutorials/3_fracture_analysis/: config.yaml  config_advanced.yaml
tutorials/3_resolved_shear/: basic.yaml  config.yaml  config_advanced.yaml  styled.yaml
tutorials/4_dilation_tendency/: config_advanced.yaml
tutorials/4_kostrov_analysis/: basic.yaml  config.yaml  config_advanced.yaml  styled.yaml
tutorials/4_resolved_shear/: config.yaml  config_advanced.yaml
tutorials/5_kostrov_analysis/: config.yaml  config_advanced.yaml
tutorials/5_tendency_plot/: a_dilation.yaml  a_dilation_NormF_2.yaml  b_slip.yaml  c_both.yaml  d_combined.yaml  dilation.yaml  slip.yaml  summarized.yaml
tutorials/6_multiple_sites/: a_principal_directions.yaml  fracture_multisite.yaml  kostrov_multisite.yaml  principal_multisite.yaml  resolved_shear_multisite.yaml  tendency_multisite.yaml
tutorials/6_tendency_plot/: a_dilation.yaml  b_slip.yaml  c_both.yaml  config.yaml  config_advanced.yaml  d_combined.yaml
tutorials/7_data_to_fem_space/: project_catalog.yaml  project_slab.yaml  project_topo.yaml
tutorials/data/: faults.csv  faults_b.csv  fractures.csv  fractures_b.csv  fractures_c.csv  topo_chile.tif
tutorials/examples/: 01_exploring_a_model.py  02_comparing_models.py  README.rst
tutorials/notebooks/: A_principal_directions.ipynb  B_from_multiple_vtu.ipynb  C_dilation_tendency_contour.ipynb  D_directions_and_tendencies.ipynb  E_full_plot.ipynb
