[metadata]
name = fem2geo
description = Structural Geology Plots from Finite Element Models
long_description = file: README.md
long_description_content_type = text/markdown
author = Pablo Iturrieta
author_email = pciturri@gfz-potsdam.de
license = AGPLv3+
version = 0.1.1
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
url = https://github.com/pabloitu/fem2geo.git

[options]
packages =
    fem2geo
install_requires =
    numpy
    matplotlib
    meshio
    pyvista
    mplstereonet
python_requires = >=3.9
zip_safe = no

[options.packages.find]
include = fem2geo*

[flake8]
max-line-length = 96